--- a/style.css
+++ b/style.css
@@ -13,10 +13,49 @@
     color: brown;
 }
 .buy-now-button{
-    background-image: linear-gradient(to bottom, rgb(32, 236, 100) 0%, #1ed83d 100%);
+    background-image: linear-gradient(to bottom, rgb(165, 236, 32) 0%, #1ed83d 100%);
     color: #fff;
     border: none;
     border-radius: 8px;
     padding: 9px 25px;
     cursor: pointer;
+}
+.cat-1{
+    background-color: orchid;
+}
+.cat-2{
+    background-color: orange;
+}
+.cat-3{
+    background-color: blue;
+}
+.cat-1, .cat-2, .cat-3{
+    padding: 10px 30px;
+    border-radius: 10px;
+
+}
+.categorice h1{
+    color: white;
+}
+.categorice img{
+    width: 100px;
+}
+.card{
+    border: none;
+    box-shadow: 5px 5px 10px lightgray;
+    border-radius: 10px;
+}
+.card-footer{
+    background-color: white;
+    border-top: none;
+    border-radius: 10px;
+}
+#subcribe{
+    height: 300px;
+}
+#subcribe h6{
+    color: gray;
+}
+footer{
+    text-align: center;
 }
